k8sCrimeApi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crimeapi
  namespace: repcrimenamespace
  labels:
    app: crimeapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crimeapi
  template:
    metadata:
      labels:
        app: crimeapi
    spec:
      containers:
      - name: crimeapi
        image: crimeapi
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: crimeapi-service
  namespace: repcrimenamespace
spec:
  selector:
    app: crimeapi
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
