k8sLawEnforcementApi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lawenforcementapi
  namespace: repcrimenamespace
  labels:
    app: lawenforcementapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lawenforcementapi
  template:
    metadata:
      labels:
        app: lawenforcementapi
    spec:
      containers:
      - name: lawenforcementapi
        image: lawenforcementapi
        imagePullPolicy: Never
        ports:
        - containerPort: 80
             
---

apiVersion: v1
kind: Service
metadata:
  name: lawenforcementapi-service
  namespace: repcrimenamespace
spec:
  selector:
    app: lawenforcementapi
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
