k8sMongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: repcrimenamespace
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:latest
        ports:
        - containerPort: 27017
---

apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: repcrimenamespace
spec:
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
