k8sIngress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: repcrime-ingress  
  namespace: repcrimenamespace
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: repcrimegateway-service
            port: 
              number: 80
